# single-file-bookmark-archiver

./: .gitignore  LICENSE  README.md  cleanup.sh  config.yaml.template  package-lock.json  pyproject.toml  setup.sh
homeassistant/: single_file_bookmark_archiver.yaml
single_file_bookmark_archiver/: bookmark_archiver.py  mqtt_wrapper_entry.py
systemd/: single-file-bookmark-archiver.service  single-file-bookmark-archiver.timer
